# camlimages

./: camlimages.opam  dune-project
exif/: dune  exif_c.c
freetype/: dune  ftintf.c
gif/: dune  gifread.c  gifwrite.c
jpeg/: dune  jpegread.c  jpegwrite.c
png/: dune  pngread.c  pngwrite.c
test/: dune
tiff/: dune  tiffread.c  tiffwrite.c
xpm/: dune  xpmread.c
