opam-version: "1.2"
maintainer: "Jun Furuse <jun.furuse@dailambda.jp>"
authors: ["Jun Furuse"]
homepage: "https://gitlab.com/camlspotter/camlimages/"
version: "5.0.3"
license: "LGPL-2 with OCaml linking exception"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "base"
  "cppo" { build }
  "dune" { >= "1.11" }
  "dune-configurator" { build }
  "ocaml" { >= "4.06.0" }
  "ocamlfind" { build }
  "stdio"
]
depopts: ["lablgtk" "graphics"]
conflicts: [
  "lablgtk" {< "2.18.6"}
]
synopsis: "Objective Caml image processing library"
description: "
CamlImages Objective Caml image processing library

This is an image processing library, which provides some basic
functions of image processing and loading/saving various image file
formats. In addition the library can handle huge images that cannot be
(or can hardly be) stored into the memory (the library automatically
creates swap files and escapes them to reduce the memory usage).
"
url {
  src: "https://gitlab.com/camlspotter/camlimages/-/archive/5.0.3/camlimages-5.0.3.tar.bz2"
}
