opam-version: "1.2"
version: "5.0.5"
license: "LGPL-2 with OCaml linking exception"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "base"
  "cppo" { build }
  "dune" { >= "1.11" }
  "dune-configurator" { build }
  "ocaml" { >= "4.06.0" }
  "ocamlfind" { build }
  "stdio"
]
depopts: [
  "lablgtk"
  "graphics"
  "conf-libpng"
  "conf-libjpeg"
  # "conf-libexif"
  # "conf-libtiff"
  # "conf-libxpm"
  "conf-freetype"
  "conf-libgif"
  "conf-ghostscript"
]
conflicts: [
  "lablgtk" {< "2.18.6"}
]
