(library
 (name camlimages_tiff)
 (public_name camlimages.tiff)
 (wrapped false)
 (libraries camlimages.core)
 (library_flags -linkall)
 (foreign_stubs
   (language c)
   (names tiffwrite tiffread)
   (flags
     (:include ../config/tiff_c_flags.sexp)))
 (c_library_flags
  (:include ../config/tiff_c_library_flags.sexp)))

(rule
 (copy ../include/oversized.h oversized.h))
